mario size follows the CSS define. Fix this bug when display on Tablet

--- a/mobile/styles/main.css
+++ b/mobile/styles/main.css
@@ -24,7 +24,7 @@ body {
 }
 
 #mario-proto {
-    position : absolute;
+    position : relative;
     width : 1.625em;
     height : 2.375em;    
 }
