--- a/mobile/styles/mobile.css
+++ b/mobile/styles/mobile.css
@@ -19,12 +19,12 @@
         margin : 0.75em;
     }
     .mario-size {
-        font-size : 40px;   /*80*/
+        font-size : 80px;
     }
     
     .platform-size {
-    	    font-size : 80px;
-		}
+        font-size : 80px;
+    }
 }
 
 /* smartphones landscape */
@@ -67,10 +67,10 @@
         margin : 0.25em;
     }
     .mario-size {
-        font-size : 40px;  /*64*/
+        font-size : 64px;
     }
     
      .platform-size {
-		    font-size : 64px;
-		}
+        font-size : 64px;
+    }
 }
